# ba_demo_ceres

./: CMakeLists.txt  LICENSE  README.md  ba_demo.cpp  ba_demo_6d.cpp  ba_demo_sophus.cpp  baproblem.cpp  baproblem.hpp  curve_fit.cc  parametersse3.cpp  parametersse3.hpp  parametersse3quat.hpp  se3.hpp
